--- a/style.css
+++ b/style.css
@@ -147,3 +147,59 @@ nav{
     border-radius: 10px;
 
 }
+
+/*-------------
+        media query--
+                    -------------------*/
+            /*-------mobile-devices---*/
+
+@media only screen and (max-width:688px){
+    nav{
+        height: 90px;
+        width: 100%;
+    }
+    .nav-sec {
+        width: 50%;
+        padding-left: 0;
+        display: flex;
+    }
+    .ab{
+        padding-right: 20px;
+    }
+    .logo{
+        height: 30%;
+        width: 80px;
+    }
+
+   .nav-sec a{
+    color: black;
+    text-decoration: none;
+    font-weight:400px;
+    padding: 5px;
+}
+    .pro-pic{
+        padding-left: 0;
+    }
+    .container{
+        width: 100%;
+    }
+       .players, .blogs, .courses{
+            grid-template-columns: repeat(1,1fr);
+        }
+        .player, .blog{
+    
+         flex-direction: column;
+     }
+
+     /*----------tablet devices-----*/
+     @media only screen and (min-width:688) and (max-width:992){
+         .container{
+             width: 100%;
+         }
+         .players{
+            .players, .blogs, .courses{
+                grid-template-columns: repeat(1, 1fr);
+            }
+    
+         
+     }
